# efekta-eink290-rs

./: Cargo.toml  README.md  bitmap-gallery.html  bitmap-mockup.html  build.rs  epaper-mockup.html  memory.x
.github/workflows/: ci.yml
bootloader/: Cargo.toml  memory.x
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
scripts/: make_ota.py
src/: bme280.rs  display.rs  main.rs  max44009.rs  ota.rs  paint.rs  ssd1680.rs
