[package]
name = "efekta-eink290-rs"
version = "0.1.0"
edition = "2021"
description = "Efekta E-Ink 290 multi-sensor Zigbee firmware in Rust (BME280 + MAX44009 + nRF52840)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/faronov/efekta-eink290-rs"

[dependencies]
# Zigbee stack (git dependency)
zigbee-types = { git = "https://github.com/faronov/zigbee-rs.git", branch = "master" }
zigbee-mac = { git = "https://github.com/faronov/zigbee-rs.git", branch = "master", features = ["nrf52840"] }
zigbee-nwk = { git = "https://github.com/faronov/zigbee-rs.git", branch = "master" }
zigbee-aps = { git = "https://github.com/faronov/zigbee-rs.git", branch = "master" }
zigbee-zcl = { git = "https://github.com/faronov/zigbee-rs.git", branch = "master" }
zigbee-runtime = { git = "https://github.com/faronov/zigbee-rs.git", branch = "master" }

# nRF52840 Embassy HAL
embassy-nrf = { version = "0.3", features = ["nrf52840", "time-driver-rtc1", "gpiote"] }
embassy-executor = { version = "0.7", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread"] }
embassy-time = "0.5"
embassy-futures = "0.1"
static_cell = "2"

# Cortex-M runtime
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

# Logging
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Embedded HAL traits
embedded-hal = "1.0"
embedded-hal-async = "1.0"

[profile.release]
opt-level = "s"
debug = 2
lto = true
