[package]
name = "efekta-eink290-rs"
version = "0.1.0"
edition = "2021"
description = "Efekta E-Ink 290 multi-sensor Zigbee firmware in Rust (BME280 + MAX44009 + nRF52840)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/faronov/efekta-eink290-rs"

[features]
default = []
# UART debug: replaces e-paper display with UART logging on TX=P0.09 RX=P0.10.
# TWISPI1 is used as UARTE1 instead of SPIM1, so the display is disabled.
# Build: cargo build --features uart-debug
uart-debug = []

[dependencies]
# Zigbee stack
zigbee-types = { git = "https://github.com/faronov/zigbee-rs.git", rev = "1caf2d6" }
zigbee-mac = { git = "https://github.com/faronov/zigbee-rs.git", rev = "1caf2d6", features = ["nrf52840"] }
zigbee-nwk = { git = "https://github.com/faronov/zigbee-rs.git", rev = "1caf2d6" }
zigbee-aps = { git = "https://github.com/faronov/zigbee-rs.git", rev = "1caf2d6" }
zigbee-zcl = { git = "https://github.com/faronov/zigbee-rs.git", rev = "1caf2d6" }
zigbee-runtime = { git = "https://github.com/faronov/zigbee-rs.git", rev = "1caf2d6", features = ["ota"] }

# nRF52840 Embassy HAL
# nfc-pins-as-gpio: P0.09/P0.10 are NFC pins by default; enable GPIO for UART TX/RX
embassy-nrf = { version = "0.3", features = ["nrf52840", "time-driver-rtc1", "gpiote", "nfc-pins-as-gpio"] }
embassy-executor = { version = "0.7", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread"] }
embassy-time = "0.5"
embassy-futures = "0.1"
static_cell = "2"

# Cortex-M runtime
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

# Logging
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Embedded HAL traits
embedded-hal = "1.0"
embedded-hal-async = "1.0"

# Embedded I/O (for UART write in uart-debug mode)
embedded-io-async = "0.6"

# Flash storage traits (for OTA firmware writes)
embedded-storage = "0.3"

[profile.release]
opt-level = "s"
debug = 2
lto = true
